--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'cabbageRN'
+include ':react-native-speech-iflytek'
+project(':react-native-speech-iflytek').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-speech-iflytek/android')
 include ':react-native-audio'
 project(':react-native-audio').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-audio/android')
 include ':react-native-audio'
