--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.3",
 		"react-native-audio": "^3.2.2",
+		"react-native-loader": "^1.1.0",
+		"react-native-modal": "^4.0.0",
 		"react-native-tab-navigator": "^0.3.4",
 		"react-navigation": "^1.0.0-beta.12"
 	},
